# server

./: .gitignore  .gitmessage  CMakeLists.txt
include/client/: client_connection.h  client_connection_cfm.h  client_connection_handle_cfm.h  client_connection_handle_rej.h  client_connection_handle_req.h  client_connection_rej.h  client_connection_req.h  client_defs.h
include/messages/: messages.h  messages_file_info.h  messages_req_types.h
include/server/: server_boot.h  server_defs.h  server_listen.h  server_menagment.h
include/util/: error_codes.h  util.h  util_list.h
src/: CMakeLists.txt  main.c
src/client/: client_connection.c  client_connection_cfm.c  client_connection_handle_cfm.c  client_connection_handle_rej.c  client_connection_handle_req.c  client_connection_rej.c  client_connection_req.c
src/messages/: messages.c  messages_file_info.c
src/server/: server_boot.c  server_listen.c  server_menagment.c
src/util/: util.c  util_list.c
test/: CMakeLists.txt
test/test_cases/: simple_test.c  util_list_test.c
